<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>graal_service_issue</groupId>
    <artifactId>org.grfstuff.compiler</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
    </properties>
<!--    <dependencies>
        <dependency>
            <groupId>graal_service_issue</groupId>
            <artifactId>jdk.internal.vm.compiler</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
    </dependencies>-->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <compilerArgs>
                        <arg>--add-modules=jdk.internal.vm.ci</arg>
                        <arg>--add-exports=jdk.internal.vm.ci/jdk.vm.ci.common=jdk.internal.vm.compiler</arg>
                        <arg>--add-exports=jdk.internal.vm.ci/jdk.vm.ci.hotspot=jdk.internal.vm.compiler</arg>
                        <arg>--patch-module</arg><arg>jdk.internal.vm.compiler=${project.basedir}/src/main/java</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>